--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-spring.application.name=hotel-appi
+spring.application.name=hotel-api
 server.servlet.context-path=/api/v1
 
 # Configuración de la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5433/hotel-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotel-db
 spring.datasource.username=postgres
 spring.datasource.password=Zyst3was
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Propiedades de JPA/Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data-test.sql
